<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout_widgetLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:baselineAligned="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="4dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/textView_prayerTimes_placeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:gravity="center"
            android:text="@string/preferences_place_noPlacesFound"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_prayerTimes_remainingTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView_prayerTimes_remainingTimeInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/prayerTimes_cardTitle_remainingTime"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView_prayerTimes_remainingTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/prayerTime_placeholder"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_prayerTimes_fajrTimeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center_horizontal|top"
                android:text="@string/prayerTime_fajr"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView_prayerTimes_fajrTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center_horizontal|bottom"
                android:text="@string/prayerTime_placeholder"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_prayerTimes_shuruqTimeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center_horizontal|top"
                android:text="@string/prayerTime_shuruq"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView_prayerTimes_shuruqTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center_horizontal|bottom"
                android:text="@string/prayerTime_placeholder"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_prayerTimes_dhuhrTimeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center_horizontal|top"
                android:text="@string/prayerTime_dhuhr"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView_prayerTimes_dhuhrTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center_horizontal|bottom"
                android:text="@string/prayerTime_placeholder"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_prayerTimes_asrTimeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center_horizontal|top"
                android:text="@string/prayerTime_asr"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView_prayerTimes_asrTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center_horizontal|bottom"
                android:text="@string/prayerTime_placeholder"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_prayerTimes_maghribTimeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center_horizontal|top"
                android:text="@string/prayerTime_maghrib"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView_prayerTimes_maghribTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center_horizontal|bottom"
                android:text="@string/prayerTime_placeholder"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_prayerTimes_ishaTimeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center_horizontal|top"
                android:text="@string/prayerTime_isha"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView_prayerTimes_ishaTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center_horizontal|bottom"
                android:text="@string/prayerTime_placeholder"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
